--- a/index.css
+++ b/index.css
@@ -1,5 +1,65 @@
-
-/* test */
 body{
-  background-color: red;
+  background-color: rgb(60,140,180);
+  /* other rgbs : 
+   * 60, 140, 180
+   *75,173,215
+   *
+   *
+   *
+   *
+   * */
+  margin: 0;
+  padding: 0;
 }
+.header{
+  position: sticky;
+  width: 100%;
+  height: 40px;
+  margin: 0px;
+  padding: 10px;
+  background-color:rgb(15, 95, 130); 
+}
+.sign_in{
+  /*box*/
+  position:absolute;
+  right:20px;
+  width: 50px;
+  height:30px;
+  padding: 2px;
+
+  /*font */
+  text-align: center;
+  color:red;
+  font-weight: bold;
+  font-size: 10px;
+  border: 2px solid  rgb(100,100,100);
+  border-radius: 13px;
+}
+.sign_in:hover{
+  color:black;
+  background-color:grey;
+}
+
+
+.log_in{
+  /*box*/
+  position: absolute;
+  right:100px;
+  width: 60px;
+  height:40px;
+  padding: 0px;
+
+  /*font */
+  text-align: center;
+  color:red;
+  font-weight: bold;
+  font-size: 10px;
+  border: 2px solid  rgb(100,100,100);
+  border-radius: 13px;
+}
+.log_in:hover{
+  color:black;
+  background-color:grey;
+}
+
+
